[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Cameron Pickett <pickett.cj@gmail.com>"]
description = "A sample project with wasm-pack"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/capickett/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"